Changed db name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=backend-api
 spring.datasource.generate-unique-name=false
-spring.datasource.name=chatapp
+spring.datasource.name=rapid-aid
 spring.h2.console.enabled=true
