Added basic websocket config and session support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=backend-api
 spring.datasource.generate-unique-name=false
 spring.datasource.name=rapid-aid
 spring.h2.console.enabled=true
+server.servlet.session.timeout=1000
+spring.session.redis.flush-mode=on_save
+spring.session.redis.namespace=spring:session
+spring.data.redis.host=localhost
+spring.data.redis.password=
+spring.data.redis.port=6379
